--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "start:api": "ng serve api"
   },
   "private": true,
   "dependencies": {
@@ -41,6 +42,8 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nrwl/angular": "12.7.2",
+    "mongoose": "^5.13.7",
+    "mongoose-paginate-v2": "^1.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
