--- a/nx.json
+++ b/nx.json
@@ -33,6 +33,9 @@
     "api-interfaces": {
       "tags": []
     },
+    "services": {
+      "tags": []
+    },
     "todos": {
       "tags": []
     },
