--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "@angular/compiler": "^12.1.0",
     "@angular/core": "^12.1.0",
     "@angular/forms": "^12.1.0",
+    "@angular/localize": "^12.1.0",
     "@angular/platform-browser": "^12.1.0",
     "@angular/platform-browser-dynamic": "^12.1.0",
     "@angular/router": "^12.1.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@nrwl/angular": "12.7.2",
+    "bootstrap": "^4.5.0",
     "mongoose": "^5.13.7",
     "mongoose-paginate-v2": "^1.4.2",
     "reflect-metadata": "^0.1.13",
