--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@nrwl/angular": "12.7.2",
     "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.5.0",
     "mongoose": "^5.13.7",
     "mongoose-paginate-v2": "^1.4.2",
     "reflect-metadata": "^0.1.13",
