--- a/package.json
+++ b/package.json
@@ -44,10 +44,18 @@
     "@nestjs/platform-express": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@nrwl/angular": "12.7.2",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "mailgen": "^2.0.15",
     "mongoose": "^5.13.7",
     "mongoose-paginate-v2": "^1.4.2",
+    "nanoid": "^3.1.30",
+    "nodemailer": "^6.7.0",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -77,7 +85,7 @@
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
     "cypress": "^7.3.0",
-    "dotenv": "~10.0.0",
+    "dotenv": "^10.0.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
