--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "@nrwl/angular": "12.7.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.5.0",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mailgen": "^2.0.15",
     "mongoose": "^5.13.7",
