--- a/package.json
+++ b/package.json
@@ -30,20 +30,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.1.0",
-    "@angular/common": "^12.1.0",
-    "@angular/compiler": "^12.1.0",
-    "@angular/core": "^12.1.0",
-    "@angular/forms": "^12.1.0",
-    "@angular/localize": "^12.1.0",
-    "@angular/platform-browser": "^12.1.0",
-    "@angular/platform-browser-dynamic": "^12.1.0",
-    "@angular/router": "^12.1.0",
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@angular/animations": "13.2.2",
+    "@angular/common": "13.2.2",
+    "@angular/compiler": "13.2.2",
+    "@angular/core": "13.2.2",
+    "@angular/forms": "13.2.2",
+    "@angular/localize": "13.2.2",
+    "@angular/platform-browser": "13.2.2",
+    "@angular/platform-browser-dynamic": "13.2.2",
+    "@angular/router": "13.2.2",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@nrwl/angular": "12.7.2",
+    "@nrwl/angular": "13.8.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.1",
@@ -58,43 +58,43 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.0.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.0",
-    "@angular-eslint/eslint-plugin": "~12.3.0",
-    "@angular-eslint/eslint-plugin-template": "~12.3.0",
-    "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/cli": "~12.1.0",
-    "@angular/compiler-cli": "^12.1.0",
-    "@angular/language-service": "^12.1.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "12.7.2",
-    "@nrwl/cypress": "12.7.2",
-    "@nrwl/eslint-plugin-nx": "12.7.2",
-    "@nrwl/jest": "12.7.2",
-    "@nrwl/linter": "12.7.2",
-    "@nrwl/nest": "12.7.2",
-    "@nrwl/node": "12.7.2",
-    "@nrwl/tao": "12.7.2",
-    "@nrwl/workspace": "12.7.2",
-    "@types/jest": "26.0.24",
+    "@angular-devkit/build-angular": "13.2.3",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "13.2.3",
+    "@angular/compiler-cli": "13.2.2",
+    "@angular/language-service": "13.2.2",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@nrwl/cli": "13.8.1",
+    "@nrwl/cypress": "13.8.1",
+    "@nrwl/eslint-plugin-nx": "13.8.1",
+    "@nrwl/jest": "13.8.1",
+    "@nrwl/linter": "13.8.1",
+    "@nrwl/nest": "13.8.1",
+    "@nrwl/node": "13.8.1",
+    "@nrwl/tao": "13.8.1",
+    "@nrwl/workspace": "13.8.1",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~4.28.3",
-    "@typescript-eslint/parser": "~4.28.3",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "cypress": "^7.3.0",
     "dotenv": "^10.0.0",
-    "eslint": "7.22.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.0.3",
-    "jest-preset-angular": "9.0.4",
-    "prettier": "^2.3.1",
-    "ts-jest": "27.0.3",
+    "jest": "27.2.3",
+    "jest-preset-angular": "11.0.0",
+    "prettier": "2.5.1",
+    "ts-jest": "27.0.5",
     "ts-node": "~9.1.1",
-    "typescript": "~4.3.5"
+    "typescript": "4.5.5"
   }
 }
