--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "name": "learning-workspace",
   "version": "0.0.0",
   "license": "MIT",
@@ -43,7 +43,10 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@ngrx/component-store": "~13.0.0",
     "@ngrx/effects": "^13.0.2",
+    "@ngrx/entity": "~13.0.0",
+    "@ngrx/router-store": "~13.0.0",
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
     "@nrwl/angular": "13.8.1",
@@ -75,6 +78,8 @@
     "@angular/language-service": "13.2.2",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@ngrx/schematics": "~13.0.0",
+    "@ngrx/store-devtools": "~13.0.0",
     "@nrwl/cli": "13.8.1",
     "@nrwl/cypress": "13.8.1",
     "@nrwl/eslint-plugin-nx": "13.8.1",
@@ -93,6 +98,7 @@
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
     "prettier": "2.5.1",
