--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
     "@nrwl/angular": "13.8.1",
+    "@popperjs/core": "^2.10.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^4.6.1",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.5.0",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
